--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/img-1.jpg" alt="">
+            <img src="images/img-1.jpg" alt="https://github.com/abhinavshankarh/Train-Seat-Arrangement-project-">
             <h3> Train Seat Arrangement project </h3>
             <div class="icons">
                 <a href="https://github.com/abhinavshankarh/Train-Seat-Arrangement-project-" class="fas fa-link"></a>
@@ -203,7 +203,7 @@
         </div>
 
         <div class="box">
-            <img src="images/img-2.jpg" alt="">
+            <img src="images/img-2.jpg" alt="https://github.com/abhinavshankarh/FLEET-MANAGEMENT-USING-GPS">
             <h3> Complete Fleet Management System with Live GPS Tracking in PHP </h3>
             <div class="icons">
                 <a href="https://github.com/abhinavshankarh/FLEET-MANAGEMENT-USING-GPS" class="fas fa-link"></a>
@@ -213,7 +213,7 @@
         </div>
 
         <div class="box">
-            <img src="images/img-3.jpg" alt="">
+            <img src="images/img-3.jpg" alt="https://github.com/abhinavshankarh/EDA-on-SuperStore-Dataset-Using-Python">
             <h3> EDA on SuperStore Dataset Using Python </h3>
             <div class="icons">
                 <a href="https://github.com/abhinavshankarh/EDA-on-SuperStore-Dataset-Using-Python" class="fas fa-link"></a>
